# prop-search

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  app.py  db.py  matcher.py  mb_login.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  property_types.py  requirements.txt  scheduler.py  tags.py
.streamlit/: config.toml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/prop_search_api/: __init__.py  auth.py  cache.py  config.py  db.py  main.py  routers.py  schemas.py
apps/scraper/: .env.example  README.md  pyproject.toml
apps/scraper/data/.pw-magicbricks-profile/: Local State
apps/scraper/data/.pw-magicbricks-profile/Default/: Cookies  DIPS  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
apps/scraper/data/.pw-magicbricks-profile/Default/DawnGraphiteCache/: data_1  index
apps/scraper/data/.pw-magicbricks-profile/Default/DawnWebGPUCache/: data_1  index
apps/scraper/data/.pw-magicbricks-profile/Default/Extension Rules/: LOG
apps/scraper/data/.pw-magicbricks-profile/Default/Extension Scripts/: LOG
apps/scraper/data/.pw-magicbricks-profile/GraphiteDawnCache/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000008  index
apps/scraper/data/.pw-magicbricks-profile/component_crx_cache/: metadata.json
apps/scraper/data/.pw-magicbricks-profile/segmentation_platform/: ukm_db
apps/scraper/prop_search_scraper/: __init__.py  cli.py  pipeline.py  store.py
(+569 files in other folders)
