[project]
name = "prop-search-api"
version = "2.0.0"
description = "prop-search v2 backend API (FastAPI) between the UI and Supabase"
requires-python = ">=3.11"
dependencies = [
    "prop-search-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary,pool]>=3.1",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
]

[project.scripts]
prop-search-api = "prop_search_api.main:run"

[tool.uv.sources]
prop-search-core = { path = "../../packages/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prop_search_api"]
